Final version integrated with polishAPI
