# server/swagger/swagger.yml
@@ -10,7 +10,7 @@ paths:
   ######################################
   /status:
     get:
-      operationId: endpoints.api-core.status
+      operationId: endpoints.apicore.status
       tags: [API Core, Services]
       summary: Checks services' statuses
       responses:
@@ -21,9 +21,9 @@ paths:
               schema:
                 $ref: '#/components/schemas/StatusRes'
 
-  /getKey:
+  /getToken:
     get:
-      operationId: endpoints.api-core.getKey
+      operationId: endpoints.apicore.getToken
       tags: [API Core, Polish API]
       parameters:
         - in: query
@@ -38,7 +38,7 @@ paths:
 
   /generateToken:
     post:
-      operationId: endpoints.api-core.generateToken
+      operationId: endpoints.apicore.generateToken
       tags: [API Core, Polish API]
       responses:
         200:
@@ -53,7 +53,7 @@ paths:
   
   /tokenValid:
     post:
-      operationId: endpoints.api-core.tokenValid
+      operationId: endpoints.apicore.tokenValid
       tags: [API Core, Polish API]
       responses:
         200:
@@ -341,6 +341,8 @@ components:
     UserData:
       type: object
       properties:
+        user_account_balance:
+          type: number
         user_inv_data:
           $ref: '#/components/schemas/UserInvoiceInfo'
         balances:
@@ -422,7 +424,9 @@ components:
         title:
           type: string
         items:
-          type: string
+          type: array
+          items:
+            $ref: '#/components/schemas/InvoiceProduct'
         amount_paid:
           type: number
         payable:
